# xplane-config

./: README.md
dref/: pyproject.toml
dref/mappings/: default.yaml
dref/src/dref/: deck.py  decks.py  drawing.py  fcu.py  udp.py
fcu/: dref_manager.py  flight_display.yaml
fcu/includes/: xplane.hpp
plan/: pyproject.toml
plan/scripts/: start.sh
plan/src/plan/: apt.py  fms.py  plan.py  rest.py  udp.py  ui.py  weather.py
plan/src/plan/to/: airframe.py  flex.py  to.py
xmidictrl/a320/: XMidiCtrl.toml  a320.key
xmidictrl/citatitonx/: XMidiCtrl.toml  citation-x.key
